# ireval

./: README.md  pyproject.toml
.github/workflows/: run_tests.yml
ireval/: __init__.py
irmetrics/: __init__.py  metrics.py
tests/: test_irmetrics.py  test_metrics.py
